tidy the sections, prepare for merger with other doc, rebuild

--- a/README.org
+++ b/README.org
@@ -137,7 +137,7 @@ using the SoC shared memory.
 #+latex: \clearpage
 ** COMMENT LINK: [[id:9a6622c8-2366-426d-a194-31cb79c3d571][Robot Operating System (ROS2) setup]]
 
-* Micro-ROS Client
+* Micro-ROS Client :WORK_IN_PROGRESS:
 #+INCLUDE: "../libmicroros_kv260/README.org" :minlevel 2 :lines "6-"
 #+latex: \clearpage
 ** COMMENT LINK:[[id:24cb8127-6bc5-4b67-8700-741622e8895d][libmicroros]]
@@ -186,15 +186,11 @@ docker run -it --privileged -v /dev:/dev xrce-dds-agent serial \
        --dev /dev/ttyACM0
 #+END_SRC
 
-* Talker Node                   :WORK_IN_PROGRESS:
-
-#+latex: \clearpage
-* Running the ping-pong node    :WORK_IN_PROGRESS:
+* Talker / ping-pong node       :WORK_IN_PROGRESS:
 A custom ping-pong node for ROS2 was developed in order to test the data transfer of the newly created
 Agent / Client system.
 
 In order to have this node up and running, you need to set basically all the previously presented points:
-- The micro-ROS firmware is running on the R5F core, as presented in the section [[Loading the firmware]].
 - On the same Linux you plan to run the node, you will need to run and keep the Agent, as presented
   in the section [[micro-ROS XRCE-DDS Agent]].
 - This ping-pong application is released as a ROS2 Python node. It is best to pull and run it
@@ -203,342 +199,12 @@ In order to have this node up and running, you need to set basically all the pre
   #+latex: \clearpage
 * Monitoring and performances evaluation :WORK_IN_PROGRESS:
 
-  #+latex: \clearpage
-* Shared memory data transfer system :WORK_IN_PROGRESS:
-
-
 #+latex: \clearpage
 * Conclusion & future           :WORK_IN_PROGRESS:
 
-
-#+LATEX: \pagebreak
-
-* micro-ROS Client
-** micro-ROS adaptation for the firmware
-Beyond the inclusion of the library itself, actually using the micro-ROS system
-within an external project require more than just importing the needed
-functions.
-
-Indeed, if you would be just adding the various function for sending messages to
-the general ROS2 network, you would face issues with four key aspects.
-These are presented in the following dedicated sub-sections.
-
-*** Time functions
-As micro-ROS can be used on a variety of board, it does not understand by itself
-what time functions are meant to be used.
-
-In that regard, some API-style function are being
-used in the library and it is then needed for the person using a new board
-to implement these function inner working using the board own time-related
-function calls.
-
-In particular for this part, the ~clock_gettime~ function is key, and could
-simply be implemented with some FreeRTOS time functions.
-
-*** Custom transport layer
-This part is the key translation layer that needs to happen in order for the
-DDS system from the micro-ROS library to be using the communication channel we
-want it to.
-
-A problem that had to be figured out lives in the fact that the operation of micro-ROS DDS
-and the board's RPMsg communication system does not operate in the same fashion.
-
-The former expects to have four functions ("open", "read", "write" and "close") that can
-be called and used by the main system, while the latter relies on FreeRTOS callback
-system, waiting on the service interrupt routine to be trigger by an incoming message.
-
-This situation meant that we count not simple translate the communication layers from one
-to another: a non-blocking polling and buffer system needed to be put into places.
-The proposed solution that was implemented and that is currently being tested
-is showed and detailed in the figure [[fig:rpmsg_fw_tasks]] below.
-
-The next figure [[fig:client_arch]] show a more visual representation of the two tasks and the
-functions used in them.
-
-#+ATTR_LATEX: :width .9\textwidth
-#+CAPTION: Two tasks are being run concurrently in order to manage the
-#+CAPTION: communication situation, with binary semaphore-based lock-unlock system.\\
-#+CAPTION: The role of the micro-ROS task (red) is to make the four functions
-#+CAPTION: ("open", "read", "write" and "close")  available and running the actual
-#+CAPTION: software function. In this example, polling the read function and writing
-#+CAPTION: back when something is receive (ping-pong function).
-#+CAPTION: The use of the ~rpmsg_send()~ function is done directly from the micro-ROS task,
-#+CAPTION: bypassing the RPMsg task in this situation.\\
-#+CAPTION: In the libmicroros implementation currently being developed, the micro-ROS task
-#+CAPTION: holds all the DDS and micro-ROS system, including the mentioned allocators function.\\
-#+CAPTION: The RPMsg task (green) is used to firstly set the RPMsg communication
-#+CAPTION: with the Linux system, then it stays locked until the ISR (interrupt service routine)
-#+CAPTION: is triggered by an incoming message. The message is then passed to the micro-ROS
-#+CAPTION: task using a buffer.\\
-#+CAPTION: When a shutdown signal is received from the Linux, both functions will gracefully close
-#+CAPTION: and are getting killed.
-#+NAME: fig:rpmsg_fw_tasks
-[[file:./img/tasks.png]]
-
-#+ATTR_LATEX: :width .9\textwidth
-#+CAPTION: Functions architecture for the Client firmware.
-#+NAME: fig:client_arch
-[[file:./img/client_arch.png]]
-
-A version of this firmware is available at my gitlab repository[fn:20]. This
-firmware was built using a custom ~Makefile~ system; it is possible to modify it
-and rebuild the firmware without this specific tools, as long as the compiler is
-installed correctly.
-
-Beyond the general two-tasks behavior of the figure [[fig:rpmsg_fw_tasks]], here are the main steps
-of the execution of the firmware:
-+ During the RPMsg init phase (RPMsg task), a "hello" message is exchanged with the Linux side
-  to confirm the OpenAMP system is also ready there.
-+ Memory allocations and custom transport function are set in the micro-ROS task.
-+ The micro-ROS and it's ~rclc~ system run extensive initialization tasks to:
-  - Initialize the support system
-  - Initialize the support node
-  - Initialize the publishers
-  - Initialize the subscribers
-+ Finally, the ping-pong function become effective with the micro-ROS task
-  polling to receive some message and sending it back to the sender.
-
-
-#+LATEX: \clearpage
-** Loading the firmware
-Having a version of our ~.elf~ firmware (with or without the included
-micro-ROS library) built and loaded onto our Kria's Linux, we want to load and run it
-on the Cortex micro-controller side.
-
-As a reminder, the firmware can be loaded from the host machine IDE workspace
-to the KRIA board through ~SSH~ using the following command:
-#+BEGIN_SRC sh
-scp /home/sunoc/workspace/rpmsg_pingpong_microros_lib/\
-    Debug/rpmsg_pingpong_microros_lib.elf  ubuntu@192.168.1.10:/home/ubuntu/
-#+END_SRC
-
-The following instructions will show how to use this binary file, and
-in particular how to upload and start the firmware on the R5F real time core
-from the Linux user-space[fn:11], to test a basic RPMsg setup[fn:12]:
-#+BEGIN_SRC sh
-sudo -s
-mv image_echo_test /lib/firmware
-echo image_echo_test  > /sys/class/remoteproc/\
-     remoteproc0/firmware
-echo start > /sys/class/remoteproc/remoteproc0/state
-echo_test
-echo stop > /sys/class/remoteproc/remoteproc0/state
-#+END_SRC
-
-In this setup you need to be careful for the name of the ~.elf~ binary to be exactly used
-in the first ~mv~ and ~echo~ command. In this example, the binary would be named
-~image_echo_test.elf~, and moved from ~$HOME~ to ~/lib/firmware~.
-
-The debug of the firmware itself is done by reading the "printf" visible from the serial
-return of the board (typically a ~/dev/ttyUSB1~), but two things are to be noted:
-+ If the ~echo start~ command fails, either the previous firmware run was not stopped,
-  or the new binary itself is impossible to run.
-+ In general, if the ~echo_test~ runs, it means that everything is okay and that
-  the RPMsg system worked successfully.
-
-#+LATEX: \clearpage
-** Loading the firmware using JTAG and Vitis IDE
-This is more of an alternative way, but it is possible to load the Client
-firmware onto the Cortex R5F onto the board from a host PC IDE, without booting or
-using the Linux on the KRIA board itself.
-
-This section will present the way to do so, and most critically, the steps that must
-be taken beforehand on the host machine for that system to work.
-
-There are two key advantaged to using this method:
-- The load time for the firmware is real fast. In particular, re-loading the
-  firmware doesn't require to reboot the entire Linux system.
-- IDE debugging available. Running the JTAG on the board allows for the firmware
-  to be debugger in a easier way.
-
-*** Testing ~xsct~ and running the drivers
-Firstly, this part of the guide assumes that a version of the Vitis Classic IDE
-was installed on the host system. Some of the needed tools to test the working of the JTAG
-system are located in the installation directory of the IDE.
-
-In my case, I'll have to go to ~~/tools/Xilinx/Vitis/2023.2~, but your mileage might vary
-depending on the settings you choose during the IDE installation and also the version of
-the IDE itself.
-
-**** Drivers
-Firstly, we need to load some drivers in order for the JTAG USB system to work:
-#+BEGIN_SRC bash
-sudo ./data/xicom/cable_drivers/lin64/install_script/install_drivers/install_drivers
-#+END_SRC
-
-**** ~dialout~ access
-It is also much needed for the user that runs the IDE to have read/write access to the
-USB devices. This can be done as follow, as root:
-#+BEGIN_SRC sh :dir "/sudo::"
-usermod -aG dialout ${USER}
-#+END_SRC
-
-You'll need to log out and log back it for the changes to apply though.
-
-**** TCL JTAG boot
-A short TCL program was provided by Honda-sensei and should be loaded in order
-for the board to boot in JTAG mode.
-The following code block shows the TCL, and it should be saved somewhere, for example
-in ~~/Downloads/boot_jtag.tcl~:
-#+BEGIN_SRC tcl :tangle ~/Downloads/boot_jtag.tcl
-proc boot_jtag { } {
-############################
-# Switch to JTAG boot mode #
-############################
-targets -set -filter {name =~ "PSU"}
-# update multiboot to ZERO
-mwr 0xffca0010 0x0
-# change boot mode to JTAG
-mwr 0xff5e0200 0x0100
-# reset
-rst -system
-}
-
-
-# Jtag connection 
-connect
-puts stdout "Connect Jtag"
-
-# Switching to JtagBoot
-puts -nonewline stdout "Start transition to jtag boot mode..."
-boot_jtag
-puts stdout "done."
-
-# Jtag disconnection
-puts -nonewline stdout "Disconnect Jtag..."
-disconnect
-puts stdout "done."
-#+END_SRC
-
-Eventually it is possible to load the JTAG boot script as follow:
-#+BEGIN_SRC bash
-cd ~/tools/Xilinx/Vitis/2023.2
-source settings64.sh
-xsct -norlwrap ~/Downloads/boot_jtag.tcl
-#+END_SRC
-
-*** Vitis IDE classic
-Note that the steps presented here must be taken after running the ~xsct~ command; without rebooting the board in the mean time.
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: With a project meant to be build and run on the Cortex R5F,
-#+CAPTION: you must first produce the ~.elf~ binary file.
-#+NAME: fig:map_ros
-[[file:./img/jtag/design.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: Then you can open the Debug Configuration window.
-#+NAME: fig:map_ros
-[[file:./img/jtag/debug_config.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: All parameters should stay the same. You can then run "Debug".
-#+NAME: fig:map_ros
-[[file:./img/jtag/debug_config2.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: The XSCT console will confirm the successful load of the firmware.
-#+CAPTION: If not, you will get error messages and should reboot the board.
-#+NAME: fig:map_ros
-[[file:./img/jtag/console.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: Selecting the Cortex R5, core #0, you can then run the application.
-#+NAME: fig:map_ros
-[[file:./img/jtag/run.png]]
-
-#+LATEX: \clearpage
-* micro-ROS XRCE-DDS Agent
-The micro-ROS Agent on the ROS2 side is the last piece of the puzzle needed to
-allow our DDS environment to use RPMsg as a mean of communication, as visible
-on the schematic of the figure [[fig:map_agent]] below.
-In particular, it will be useful to modify this agent in order to archive
-the full RPMsg communication for ROS2[fn:19].
-An [[https://micro.ros.org/docs/tutorials/advanced/create_custom_transports/][official documentation]] exists, but it gives little to no detail
-on how to deploy such modified, custom transport setup.
-This part of the guide will focus on it.
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: The agent (red border) allows for a micro-ROS
-#+CAPTION: instance to communicate with a ROS2 system.
-#+CAPTION: It is deployed on the Linux side, as a ROS2 node.
-#+NAME: fig:map_agent
-[[file:./img/map_agent.png]]
-
-** Building a XRCE-DDS agent in a Docker
-The same command presented above for running a custom agent "bare-metal" can be
-run inside a Docker.
-
-#+BEGIN_SRC sh
-docker run -d --name XRCE_DDS_Agent -it --net=host -v \
-       /dev:/dev --privileged ros:iron
-docker exec -it XRCE_DDS_Agent bash
-#+END_SRC
-
-
-#+BEGIN_SRC sh
-git clone https://github.com/eProsima/Micro-XRCE-DDS-Agent.git
-cd Micro-XRCE-DDS-Agent
-docker build -t xrce-dds-agent .
-docker run -it --privileged -v /dev:/dev xrce-dds-agent serial \
-       --dev /dev/ttyACM0
-#+END_SRC
-
-** Building the Agent version with a modified transport
-The first working implementation of the DDS over RPMsg happened over a
-XRCE-DDS agent whose ~serial~ transport layer has been modified in order
-to use OpenAMP's RPMsg instead.
-
-The build process it the same as usual, just pulling from my fork of eProsima repository
-and using the ~develop~ branch:
-
-#+BEGIN_SRC sh
-git clone https://github.com/sunoc/Micro-XRCE-DDS-Agent.git -b develop
-cd Micro-XRCE-DDS-Agent
-mkdir build
-cd build
-cmake ..
-make
-#+END_SRC
-
-Giving that your are working from an environment in which the ROS2 tools are available, it is then possible
-to run the Agent as follow[fn:21] [fn:22]:
-
-#+BEGIN_SRC sh
-source /opt/ros/$ROS_DISTRO/setup.bash
-
-./MicroXRCEAgent serial --dev /dev/null --verbose 6
-#+END_SRC
-
-
-#+LATEX: \clearpage
-* micro-ROS Talker
-
 #+latex: \clearpage
-* Running the ping-pong node                               :WORK_IN_PROGRESS:
-A custom ping-pong node for ROS2 was developed in order to test the data transfer of the newly created
-Agent / Client system.
-
-In order to have this node up and running, you need to set basically all the previously presented points:
-- The micro-ROS firmware is running on the R5F core, as presented in the section [[Loading the firmware]].
-- On the same Linux you plan to run the node, you will need to run and keep the Agent, as presented
-  in the section [[micro-ROS XRCE-DDS Agent]].
-- This ping-pong application is released as a ROS2 Python node. It is best to pull and run it
-  in a ROS2 environment to avoid having dependencies issues, as presented in the section about ROS2.
-
-  #+latex: \clearpage
-* Monitoring and performances evaluation                   :WORK_IN_PROGRESS:
-
-  #+latex: \clearpage
-* Shared memory data transfer system                       :WORK_IN_PROGRESS:
-
-
-#+latex: \clearpage
-* Conclusion & future                                      :WORK_IN_PROGRESS:
-
-#+latex: \clearpage
-* Publications
-
+* Publications    :WORK_IN_PROGRESS:
+Tryna link the conference and journal paper related to this project here. Unclear how atm.
 
 # ================================================================================
 # APPENDIX
